fix contrast issues

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -3,6 +3,7 @@
     --color-heading: #2b3b00;
     --color-accent: #eb4200;
     --color-background: #f4f0e9;
+    --color-accent-dark: #942A00;
 }
 
 body {
@@ -45,6 +46,10 @@ body {
 
 .text-background {
     color: var(--color-background);
+}
+
+.text-accent-dark {
+    color: var(--color-accent-dark);
 }
 
 
@@ -153,7 +158,7 @@ header .brand {
 }
 
 #header-navigation>a.active {
-    color: var(--color-accent);
+    border-bottom: 1px solid var(--color-accent);
 }
 
 /* ----------------- HERO ----------------- */
@@ -360,7 +365,7 @@ footer {
 }
 
 .contact-form input[type="submit"] {
-    background: var(--color-accent);
+    background: var(--color-accent-dark);
     color: var(--color-background);
     border: none;
 }
